--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,19 @@
 						<version>${spring-restdocs.version}</version>
 					</dependency>
 				</dependencies>
+				
+				  <dependency>
+         <groupId>io.springfox</groupId>
+         <artifactId>springfox-swagger2</artifactId>
+         <version>2.7.0</version>
+      </dependency>
+
+      <dependency>
+         <groupId>io.springfox</groupId>
+         <artifactId>springfox-swagger-ui</artifactId>
+         <version>2.7.0</version>
+      </dependency>
+
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
